	OCTAVE_INT_NDARRAY_T.
	* ov-intx.h (class OCTAVE_VALUE_INT_MATRIX_T,
	class OCTAVE_VALUE_INT_SCALAR_T): Use intNDArray<OCTAVE_INT_T>
	instead of OCTAVE_INT_NDARRAY_T.
	(OCTAVE_VALUE_INT_MATRIX_T::increment,
	OCTAVE_VALUE_INT_MATRIX_T::decrement,
	OCTAVE_VALUE_INT_SCALAR_T::increment,
	OCTAVE_VALUE_INT_SCALAR_T::decrement): Convert 1 to OCTAVE_INT_T.

2008-11-12  Michael Goffioul  <michael.goffioul@gmail.com>

	* dirfcn.cc (Ffilesep): Make it return all file separators when 'all'
	is given as argument.

	* DLD-FUNCTIONS/getrusage.cc: Undefine min/max.
	* TEMPLATE-INST/Array-os.cc: Declare Array<bool> as extern template.

2008-11-12  David Bateman  <dbateman@free.fr>

	* OPERATORS/op-cell.cc (op_catop_matrix_cell): Cast args in the correct
	order.
	* OPERATORS/op-struct.cc (op_catop_matrix_struct): Ditto.

2008-11-11  Jaroslav Hajek <highegg@gmail.com>

	* pt-assign.cc: Fix handling of empty cs-lists in assignment LHS.

2008-11-11  John W. Eaton  <jwe@octave.org>

	* lex.l (<MATRIX_START>{S}+): Don't insert separator if next token
	is a separator.

	* parse.y (F__parser_debug_flag__): New function.

2008-10-31  Jaroslav Hajek <highegg@gmail.com>

	* xnorm.cc: New source.
	* xnorm.h: New header file.
	* Makefile.in: Include xnorm.cc in the build process.
	* data.cc (Fnorm): Call xnorm, xcolnorms, xrownorms or xfrobnorm
	to do the actual work.


2008-10-31  David Bateman  <dbateman@free.fr>

	* ov-base-scalar.h (octave_value octave_base_scalar::reshape 
	(const dim_vector&) const): New method.

2008-10-30  John W. Eaton  <jwe@octave.org>

	* oct-map.cc (Octave_map::index): Copy key_list.

2008-10-31  David Bateman  <dbateman@free.fr>

	* graphics.h.in (void image::init (void)): Add a constraint for
	logical cdata.
	
	* graphics.h.in (base_property::delete_listener): New method.
	(property::delete_listener): New method.
	(base_graphics_object::delete_listener): New method.
	(base_graphics_object::delete_property_listener): New method.