@@ -68,6 +68,10 @@
 	OCTAVE_VALUE_INT_SCALAR_T::increment,
 	OCTAVE_VALUE_INT_SCALAR_T::decrement): Convert 1 to OCTAVE_INT_T.
 
+2008-11-15  Thorsten Meyer  <thorsten.meyier@gmx.de>
+
+        * strfns.cc (Fchar): adapt to conserve empty strings, add tests
+        
 2008-11-12  Michael Goffioul  <michael.goffioul@gmail.com>
 
 	* dirfcn.cc (Ffilesep): Make it return all file separators when 'all'
